environments/istio/ambient/apps/base/active/5-tier-app/ns-1-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-1
  labels:
    #istio-injection: enabled
    istio.io/dataplane-mode: ambient
    seed: "1695771711000636000"
